# prompt-lab

./: .env  .env.example  .gitignore  README.md  global_system_prompt.txt  harness.py  mainfest.yaml  pyproject.toml
eval/: cases.yaml
eval/results/20251028-131929/: results.csv  results.json  results.md
prompts/distress/: v1.yaml
prompts/emotion/: v1.yaml
prompts/interpersonal/: v1.yaml
prompts/mindfulness/: v1.yaml
